fix(vim.ui)!: change open() to return pcall-like values
Problem:
`vim.ui.open` unnecessarily invents a different success/failure
convention. Its return type was changed in 57adf8c6e01d, so we might as
well change it to have a more conventional form.

Solution:
Change the signature to use the `pcall` convention of `status, result`.

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -157,6 +157,8 @@ unreleased features on Nvim HEAD.
 
 • Renamed vim.tbl_isarray() to vim.isarray().
 
+• Changed |vim.ui.open()| return-signature to match pcall() convention.
+
 ==============================================================================
 NEW FEATURES                                                    *news-features*
 
