--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -407,7 +407,8 @@ The following changes to existing APIs or features add new behavior.
     correctly without it. (Use |gF| for filepaths suffixed with ":line:col").
   • 'comments' includes "fb:•".
   • 'shortmess' includes the "C" flag.
-  • 'grepprg' defaults to using ripgrep if available.
+  • 'grepprg' uses the -H and -I flags for grep by default,
+    and defaults to using ripgrep if available.
   • |crn| in Normal mode maps to |vim.lsp.buf.rename()|.
   • |crr| in Normal and Visual mode maps to |vim.lsp.buf.code_action()|.
   • "gr" in Normal mode maps to |vim.lsp.buf.references()| |gr-default|
