feat(defaults): visual CTRL-R for LSP mappings #28537
Problem:
The new LSP "refactor menu" keybinding "crr" is also defined in visual
mode, which overlaps with the builtin "c".

Solution:
Use CTRL-R instead of "crr" for visual mode.

fix #28528

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -410,7 +410,8 @@ The following changes to existing APIs or features add new behavior.
   • 'grepprg' uses the -H and -I flags for grep by default,
     and defaults to using ripgrep if available.
   • |crn| in Normal mode maps to |vim.lsp.buf.rename()|.
-  • |crr| in Normal and Visual mode maps to |vim.lsp.buf.code_action()|.
+  • |crr| in Normal mode maps to |vim.lsp.buf.code_action()|.
+  • |v_CTRL-R_CTRL-R| in Visual mode maps to |vim.lsp.buf.code_action()|.
   • "gr" in Normal mode maps to |vim.lsp.buf.references()| |gr-default|
   • |i_CTRL-S| in Insert mode maps to |vim.lsp.buf.signature_help()|
   • "]d" and "[d" in Normal mode map to |vim.diagnostic.goto_next()| and
