--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -174,6 +174,9 @@ cycle (Nvim HEAD, the "master" branch).
 
 • Removed Iter:nthback(), use Iter:nth() with negative index instead.
 
+• Renamed nvim_complete_set to nvim__complete_set and marked it as
+  experimental.
+
 ==============================================================================
 NEW FEATURES                                                    *news-features*
 
