fix(lsp): change LspProgress data structure; rename 'result' to 'params'
Rename the field `result` to `params` in the `data` table for
`LspProgress` autocmds.

The previous name was chosen because the initial handler implementation
mistakenly had a parameter name `result` instead of `params` for the
`$/progress` LSP "notification" handler. However, `params` would be a
more appropriate name that is more consistent with the underlying LSP
type (`ProgressParams`).

See also: https://microsoft.github.io/language-server-protocol/specifications/specification-current/#progress

This change is technically a breaking change within the nvim-0.10
development versions, so any existing autocmd handlers for `LspProgress`
might break after this commit. User configs and plugins are advised to
update autocmd handlers accordingly (see :help LspProgress).

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -178,6 +178,8 @@ cycle (Nvim HEAD, the "master" branch).
 
 • Renamed vim.snippet.exit() to  vim.snippet.stop().
 
+• Changed |event-data| table for |LspProgress|: renamed `result` to `params`.
+
 ==============================================================================
 NEW FEATURES                                                    *news-features*
 
