feat(defaults): add default LSP mappings (again)

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -79,7 +79,11 @@ API
 
 DEFAULTS
 
-• TODO
+• Keymaps:
+  - |grn| in Normal mode maps to |vim.lsp.buf.rename()|
+  - |grr| in Normal mode maps to |vim.lsp.buf.references()|
+  - |gra| in Normal and Visual mode maps to |vim.lsp.buf.code_action()|
+  - CTRL-S in Insert mode maps to |vim.lsp.buf.signature_help()|
 
 EDITOR
 
