refactor(api): nvim_win_xx_ns are EXPERIMENTAL
Problem:
The nvim_win_xx_ns function family introduced in ba0370b1d718d473d0ef51c35d88b98ba220082b
needs more bake-time. Currently it's narrowly defined for windows, but
other scopes ("buffer") and features are likely in the future.

Solution:
- Rename the API with double-underscore to mark it as EXPERIMENTAL.

TODO/FUTURE:
- Rename and change the signature to support more than just "window"
  scope, and for other flexibility.
- Open question: we could choose either:
  - "store scopes on namespaces", or
  - "store namespaces on scopes (w:/b:/…)"

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -216,7 +216,7 @@ The following new APIs and features were added.
     |nvim_win_set_config()|.
   • |nvim_input_mouse()| supports mouse buttons "x1" and "x2".
   • Added |nvim_tabpage_set_win()| to set the current window of a tabpage.
-  • |nvim_win_add_ns()| can bind a |namespace| to a window-local scope(s).
+  • |nvim__win_add_ns()| can bind a |namespace| to a window-local scope(s).
     • Extmarks opt-in to this scoping via the `scoped` flag of |nvim_buf_set_extmark()|.
 
 • 'foldtext' now supports virtual text format. |fold-foldtext|
