feat(fs): follow symlinks in find()

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -518,6 +518,9 @@ The following changes to existing APIs or features add new behavior.
 
 • |nvim_buf_call()| and |nvim_win_call()| now preserves any return value (NB: not multiple return values)
 
+• |vim.fs.find()| accepts `opts.follow_symlinks` to find files in symlinked
+  directories.
+
 • Treesitter
   • |Query:iter_matches()|, |vim.treesitter.query.add_predicate()|, and
     |vim.treesitter.query.add_directive()| accept a new `all` option which
