--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -90,6 +90,7 @@ EDITOR
 * On Windows, filename arguments on the command-line prefixed with "~\" or
   "~/" are now expanded to the user's profile directory, not a relative path
   to a literal "~" directory.
+• CTRL-/ and CTRL-_ in Insert mode puts comment markers around the cursor.
 
 EVENTS
 
