feat(main): expand file ~\ or ~/ prefix on Windows
In command_line_scan() for MSWIN, expand "~\" or "~/" prefixed paths to
the USERPROFILE environment variable for the user's profile directory.

Fix #23901

Signed-off-by: Rafael Kitover <rkitover@gmail.com>

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -87,7 +87,9 @@ DEFAULTS
 
 EDITOR
 
-• TODO
+* On Windows, filename arguments on the command-line prefixed with "~\" or
+  "~/" are now expanded to the user's profile directory, not a relative path
+  to a literal "~" directory.
 
 EVENTS
 
