--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -85,6 +85,12 @@ DEFAULTS
   - |gra| in Normal and Visual mode maps to |vim.lsp.buf.code_action()|
   - CTRL-S in Insert mode maps to |vim.lsp.buf.signature_help()|
 
+• Snippet:
+  - `<Tab>` in Insert and Select mode maps to |vim.snippet.jump({ direction = 1 })|
+    when a snippet is active and jumpable forwards.
+  - `<S-Tab>` in Insert and Select mode maps to |vim.snippet.jump({ direction = -1 })|
+    when a snippet is active and jumpable backwards.
+
 EDITOR
 
 • TODO
