feat(defaults): use vim.diagnostic.jump() for default mappings
This allows the mappings to work with a count and also enables new ]D
and [D mappings to go to the last/first diagnostic in the buffer.

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -34,11 +34,14 @@ API
 
 DEFAULTS
 
-• TODO
+• |]d-default| and |[d-default| accept a count.
+• |[D-default| and |]D-default| jump to the first and last diagnostic in the
+  current buffer, respectively.
 
 EDITOR
 
-• The order in which signs are placed was changed. Higher priority signs will now appear left of lower priority signs.
+• The order in which signs are placed was changed. Higher priority signs will
+  now appear left of lower priority signs.
 
 EVENTS
 
