fixup: make vim.net opt-out instead of opt-in

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -170,16 +170,13 @@ These existing features changed their behavior.
 
 • N/A
 
-• `:e, :w, :[range]w!, and :r https://*,http://*,ftp://*,scp://*` can now
-  use |vim.net.fetch()|. Opt-in via >lua
-      vim.g.lua_net_enable = true
+• `:e, :w, :[range]w!, and :r https://*,http://*,ftp://*,scp://*` now
+  uses |vim.net.fetch()|. Opt-out via >lua
+      vim.g.lua_net_disable = true
 <
 • `:e https://*,http://*,ftp://*,scp://*` now automatically matches
-  filetype using the url. Optionally, you can enable (slower) automatic
-  full-text filetype matching for editing remote files that don't have an
-  extension (for example https://neovim.io/ -> `ft=html`) via >lua
-      vim.g.lua_net_ft_full = true
-<
+  filetype using the url. 
+
 ==============================================================================
 REMOVED FEATURES                                                 *news-removed*
 
