fix(messages)!: vim.ui_attach message callbacks are unsafe
Problem:  Lua callbacks for "msg_show" events with vim.ui_attach() are
          executed when it is not safe.
Solution: Disallow non-fast API calls for "msg_show" event callbacks.
          Automatically detach callback after excessive errors.
          Make sure fast APIs do not modify Nvim state.

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -72,7 +72,8 @@ EDITOR
 
 EVENTS
 
-• TODO
+• |vim.ui_attach()| callbacks for |ui-messages| `msg_show` events are executed in
+  |api-fast| context.
 
 LSP
 
