feat: add undokeepcurs option to keep the cursor to the position prior the undo
This can be useful, for example, if you are using autocommands to format your import declarations. By default, when you perform the undo operation, your cursor will be moved to the top of your file, in the import instructions section, which is annoying if you want to focus on the code itself.

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -129,6 +129,8 @@ LUA
 OPTIONS
 
 • 'completeopt' flag "fuzzy" enables |fuzzy-matching| during |ins-completion|.
+• 'undokeepcurs' flag allow control over the cursor position after undo
+  operation
 
 PERFORMANCE
 
