feat(treesitter): allow get_node to return anonymous nodes
Adds a new field `include_anonymous` to the `get_node` options to allow
anonymous nodes to be returned.

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -167,6 +167,8 @@ TERMINAL
 TREESITTER
 
 • |LanguageTree:node_for_range()| gets anonymous and named nodes for a range
+• |vim.treesitter.get_node()| now takes an option `include_anonymous`, default
+  false, which allows it to return anonymous nodes as well as named nodes.
 
 TUI
 
