--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -249,6 +249,10 @@ These existing features changed their behavior.
   more emoji characters than before, including those encoded with multiple
   emoji codepoints combined with ZWJ (zero width joiner) codepoints.
 
+• Text in the 'statusline', 'tabline', and 'winbar' now inherits highlights
+  from the respective |hl-StatusLine|, |hl-TabLine|, and |hl-WinBar| highlight
+  groups.
+
 ==============================================================================
 REMOVED FEATURES                                                 *news-removed*
 
