feat(lsp): support pull diagnostics on save via flag
Problem:
Some lsp servers can be configured to refresh diagnostics on save to avoid
performance issues. The introduction of pull diagnostics in 0.10
goes around those settings by requesting diagnostics with every change
event. See #29792

Solution:
Add an optional lsp client flag to request diagnostics on save if the
lsp server supports pull diagnostics. By default, the existing behavior is
maintained and diagnostics are requested with every change event, if
the server supports pull diagnostics.

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -130,6 +130,8 @@ LSP
 
 • Completion side effects (including snippet expansion, execution of commands
   and application of additional text edits) is now built-in.
+• |vim.lsp.Client| flag `pull_diagnostic_on_save` sends diagnostic requests on
+  save instead of change
 • |vim.lsp.util.locations_to_items()| sets `end_col` and `end_lnum` fields.
 • |vim.lsp.buf.format()| now supports passing a list of ranges
   via the `range` parameter (this requires support for the
