--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -68,8 +68,8 @@ LSP
 • Add convert field in |vim.lsp.completion.BufferOpts| of
   |vim.lsp.completion.enable()| an optional function used to customize the
   transformation of an Lsp CompletionItem to |complete-items|.
-• |vim.lsp.diagnostic.from()| can now be used to convert a given list of `vim`
-  diagnostics to their LSP representation.
+• |vim.lsp.diagnostic.from()| can be used to convert a list of
+  |vim.Diagnostic| objects into their LSP diagnostic representation.
 
 LUA
 
