feat(treesitter): return supertypes in language.inspect()
- This commit requires pulling in Tree-sitter's `parser.h` file.
- Supertypes are just put in with the rest of the symbols in the same
  table field.

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -182,6 +182,7 @@ TREESITTER
 • |LanguageTree:node_for_range()| gets anonymous and named nodes for a range
 • |vim.treesitter.get_node()| now takes an option `include_anonymous`, default
   false, which allows it to return anonymous nodes as well as named nodes.
+• |vim.treesitter.language.inspect()| now shows node supertypes
 
 TUI
 
