--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -198,6 +198,7 @@ UI
   which controls the tool used to open the given path or URL. If you want to
   globally set this, you can override vim.ui.open using the same approach
   described at |vim.paste()|.
+• Command-line (|:|) is colored
 
 ==============================================================================
 CHANGED FEATURES                                                 *news-changed*
