feat(float): allow enabling mouse for non-focusable window
Problem:  Cannot allow mouse interaction for non-focusable float window.
Solution: Add a "mouse" field to float window config.

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -40,6 +40,8 @@ API
   This is not expected to break clients because there are no known clients
   that actually use the `return_type` field or the parameter type names
   reported by |--api-info| or |nvim_get_api_info()|.
+• |nvim_open_win()| supports a `mouse` field that allows configuring mouse
+  interaction with the window separately from `focusable` field.
 • Renamed `nvim__id_dictionary` (unsupported/experimental API) to
   `nvim__id_dict`.
 
