feat(defaults): add new `[` and `]` pending operators

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -195,6 +195,7 @@ EDITOR
   "~/" are now expanded to the user's profile directory, not a relative path
   to a literal "~" directory.
 • |hl-PmenuMatch| and |hl-PmenuMatchSel| show matched text in completion popup.
+• Added new [ / ] cursor-aware operators. See |[-default| / |]-default|.
 
 EVENTS
 
