feat: swap grs and grS keymaps

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -140,8 +140,8 @@ DEFAULTS
   • |grn| in Normal mode maps to |vim.lsp.buf.rename()|
   • |grr| in Normal mode maps to |vim.lsp.buf.references()|
   • |gri| in Normal mode maps to |vim.lsp.buf.implementation()|
-  • |grs| in Normal mode maps to |vim.lsp.buf.workspace_symbol()|
-  • |grS| in Normal mode maps to |vim.lsp.buf.document_symbol()|
+  • |grS| in Normal mode maps to |vim.lsp.buf.workspace_symbol()|
+  • |grs| in Normal mode maps to |vim.lsp.buf.document_symbol()|
   • |gra| in Normal and Visual mode maps to |vim.lsp.buf.code_action()|
   • CTRL-S in Insert mode maps to |vim.lsp.buf.signature_help()|
   • Mouse |popup-menu| includes an "Open in web browser" item when you right-click
