feat(vim.validate): improve fast form and deprecate spec form
Problem:

`vim.validate()` takes two forms when it only needs one.

Solution:

- Teach the fast form all the features of the spec form.
- Deprecate the spec form.
- General optimizations for both forms.
- Add a `message` argument which can be used alongside or in place
  of the `optional` argument.

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -200,6 +200,8 @@ LSP
 LUA
 
 • |vim.fs.rm()| can delete files and directories.
+• |vim.validate()| now has a new signature which uses less tables,
+  is more peformant and easier to read.
 
 OPTIONS
 
