feat(lsp)!: support multiple clients in goto methods (#30877)
Relates to:

- https://github.com/neovim/neovim/issues/30034
- https://github.com/neovim/neovim/issues/17712
- https://github.com/neovim/neovim/issues/16363

Closes:

- https://github.com/neovim/neovim/issues/26936 (but only provides bufnr
  and method)
- https://github.com/neovim/neovim/issues/22318

Might fix: https://github.com/neovim/neovim/issues/30737

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -82,6 +82,11 @@ LSP
 • |vim.lsp.buf.references()| now handles multiple clients but no longer
   triggers the global `textDocument/references` handler from
   `vim.lsp.handlers`
+• |vim.lsp.buf.declaration()|, |vim.lsp.buf.definition()|,
+  |vim.lsp.buf.type_definition()| and |vim.lsp.buf.implementation()| now
+  support merging the results of multiple clients but no longer trigger the
+  global handlers from `vim.lsp.handlers`
+
 
 LUA
 
