--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -208,6 +208,8 @@ LUA
 • |vim.fs.rm()| can delete files and directories.
 • |vim.validate()| now has a new signature which uses less tables,
   is more peformant and easier to read.
+• |vim.str_byteindex()| and |vim.str_utfindex()| now have new signatures
+  which offer more flexibility and are easier to read.
 
 OPTIONS
 
