feat(lsp): multi-client support for signature_help
Signatures can be cycled using `<C-s>` when the user enters the floating
window.

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -209,6 +209,8 @@ LSP
   `textDocument/rangesFormatting` request).
 • |vim.lsp.buf.code_action()| actions show client name when there are multiple
   clients.
+• |vim.lsp.buf.signature_help()| can now cycle through different signatures
+  using `<C-s>` and also support multiple clients.
 
 LUA
 
