feat(api): add nvim_win_get_view
Problem: lack of access to view-related data such as leftcol at the lua api.

Solution: add nvim_win_get_view api function

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -150,6 +150,7 @@ The following new features were added.
 API
 
 • |nvim__ns_set()| can set properties for a namespace
+• add api |nvim_win_get_view()| for get view information for a specified window.
 
 DEFAULTS
 
