feat(lsp)!: refactor vim.lsp.buf.format
Inline the handlers from vim.lsp.handlers.

- multi-cient: the timeout now applies to the whole of
  `vim.lsp.buf.format()` instead of the timeout for each request.

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -93,6 +93,8 @@ LSP
   can no longer be configured with |vim.lsp.with()|.
   Instead use: >lua
     vim.diagnostic.config(config, vim.lsp.diagnostic.get_namespace(client_id))
+• |vim.lsp.buf.format()| no longer triggers the global handlers from
+  `vim.lsp.handlers`
 <
 
 LUA
