feat(options)!: disallow setting options to sentinel value
Problem: We internally use sentinel values for global-local options to represent an unset local value for global-local options. These values should be considered to be an implementation detail, and therefore should not be represented anywhere in the docs, and should also not be directly settable as an option value, and instead should be set only through `set option<`.

Solution: Remove reference of sentinel values from documentation, and make it an error to set an option to those values. This is imperative because the future goal is to remove the need for sentinel values entirely by using a separate internal mechanism to indicate an unset local value for options with multiple scopes.

Ref: #25672 #29314

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -115,6 +115,8 @@ OPTIONS
   and boolean |global-local| options instead of removing the local value.
 • Setting |hidden-options| now gives an error. In particular, setting
   'noshellslash' is now only allowed on Windows.
+• Setting the local value of |'scrolloff'| or |'sidescrolloff'| to `-1` now gives an
+  error. Use `:set {option}<` instead to unset the local option value.
 
 PLUGINS
 
