vim-patch:9.1.0864: message history is fixed to 200
Problem:  message history is fixed to 200
Solution: Add the 'msghistory' option, increase the default
          value to 500 (Shougo Matsushita)

closes: vim/vim#16048

https://github.com/vim/vim/commit/4bd9b2b2467e696061104a029000e9824c6c609e

Co-authored-by: Shougo Matsushita <Shougo.Matsu@gmail.com>
Co-authored-by: Milly <milly.ca@gmail.com>

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -228,6 +228,7 @@ LUA
 OPTIONS
 
 • 'completeopt' flag "fuzzy" enables |fuzzy-matching| during |ins-completion|.
+• 'msghistory' controls maximum number of messages to remember.
 • 'tabclose' controls which tab page to focus when closing a tab page.
 
 PERFORMANCE
