--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -95,6 +95,9 @@ LSP
   Instead use: >lua
     vim.diagnostic.config(config, vim.lsp.diagnostic.get_namespace(client_id))
 <
+• |vim.lsp.util.make_position_params()|, |vim.lsp.util.make_range_params()|
+  and |vim.lsp.util.make_given_range_params()| now require the `offset_encoding`
+  parameter.
 
 LUA
 
