feat: add API for getting file permissions in octal
Problem: There is currently no API to return the current file permissions in octal.

Solution: Add one. The `getfpermoctal` API function returns the current file permissions, in octal.

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -167,6 +167,7 @@ The following new features were added.
 API
 
 • |nvim__ns_set()| can set properties for a namespace
+• |vim.fn.getfpermoctal()| can get the file permissions in octal
 
 DEFAULTS
 
