--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -58,6 +58,8 @@ DEFAULTS
 • |]d-default| and |[d-default| accept a count.
 • |[D-default| and |]D-default| jump to the first and last diagnostic in the
   current buffer, respectively.
+• 'number', 'relativenumber', and 'signcolumn' are disabled in |terminal|
+  buffers. See |terminal-config| for an example of changing these defaults.
 
 DIAGNOSTICS
 
